--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <title>HomeTheater Login</title>
     <link rel="stylesheet" th:href="@{/login.css}">
     <link rel="icon" type="image/png" th:href="@{https://raw.githubusercontent.com/nikholt1/HTasset/refs/heads/main/storedAssets/R.png}">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <section class="login-section" style="background-image: url('https://raw.githubusercontent.com/nikholt1/HTasset/main/loginImage/loginImage.jpg');">
@@ -27,7 +27,5 @@
         </div>
     </div>
 </section>
-
-
 </body>
 </html>
