--- a/src/main/resources/templates/profiles.html
+++ b/src/main/resources/templates/profiles.html
@@ -13,60 +13,67 @@
     <link rel="stylesheet" th:href="@{/main.css}">
 </head>
 <body>
-<nav class="navbar">
-    <div class="nav-left">
-        <a class="navItem" th:href="@{/profiles/manageAccount}">Manage Users</a>
-        <a class="navItem" th:href="@{/profiles/add}">Add User</a>
 
+
+<section class="profilesSection">
+    <nav class="navbar">
+        <div class="nav-left">
+            <a class="navItem" th:href="@{/profiles/manageAccount}">Manage Users</a>
+            <a class="navItem" th:href="@{/profiles/add}">Add User</a>
+
+        </div>
+
+        <div class="nav-right">
+            <a th:href="@{/videos/settings#help}">
+                <button class="help-btn" id="helpBtn">Help</button>
+            </a>
+
+            <div class="profile-dropdown">
+                <img th:src="@{https://raw.githubusercontent.com/nikholt1/HTasset/refs/heads/main/storedAssets/R.png}"
+                     alt="Profile Picture"
+                     class="profile-pic"
+                     id="profilePic">
+            </div>
+        </div>
+    </nav>
+    <div class="dropdown-menu" id="dropdownMenu">
+        <a class="dpdItemUserName" th:text="${userName}"></a>
+        <a class="dpdItem" th:href="@{/}">Change Profile</a>
+        <a class="dpdItem" th:href="@{/profiles/manageAccount}">Manage users</a>
+        <a class="dpdItem" th:href="@{/profiles/add}">Add new user</a>
+        <a class="dpdItemLogOut" th:href="@{/logout}">Logout</a>
     </div>
 
-    <div class="nav-right">
-        <a th:href="@{/videos/settings#help}">
-            <button class="help-btn" id="helpBtn">Help</button>
-        </a>
 
-        <div class="profile-dropdown">
-            <img th:src="@{https://raw.githubusercontent.com/nikholt1/HTasset/refs/heads/main/storedAssets/R.png}"
-                 alt="Profile Picture"
-                 class="profile-pic"
-                 id="profilePic">
-        </div>
-    </div>
-</nav>
-<div class="dropdown-menu" id="dropdownMenu">
-    <a class="dpdItemUserName" th:text="${userName}"></a>
-    <a class="dpdItem" th:href="@{/}">Change Profile</a>
-    <a class="dpdItem" th:href="@{/profiles/manageAccount}">Manage users</a>
-    <a class="dpdItem" th:href="@{/profiles/add}">Add new user</a>
-    <a class="dpdItemLogOut" th:href="@{/logout}">Logout</a>
-</div>
-<div class="profiles_wrapper">
 
-    <div class="profiles_container">
+    <div class="profiles_wrapper">
 
-        <p th:if="${#lists.isEmpty(users)}" class="no-profiles">
-            No profiles yet.
-        </p>
+        <div class="profiles_container">
 
-        <!-- Profile cards -->
-        <a th:each="user : ${users}"
-           th:href="@{'/profiles/select'(userId=${user.userId})}"
-           class="profiles_box">
-            <img th:src="@{'/profileImages/' + ${user.profilePicturePath}}" alt="Profile Picture" class="profile-img"/>
-            <div class="username" th:text="${user.username}">Username</div>
+            <p th:if="${#lists.isEmpty(users)}" class="no-profiles">
+                No profiles yet.
+            </p>
 
-        </a>
+            <!-- Profile cards -->
+            <a th:each="user : ${users}"
+               th:href="@{'/profiles/select'(userId=${user.userId})}"
+               class="profiles_box">
+                <img th:src="@{'/profileImages/' + ${user.profilePicturePath}}" alt="Profile Picture" class="profile-img"/>
+                <div class="username" th:text="${user.username}">Username</div>
+            </a>
 
-        <!-- Add profile button -->
-        <div class="add-profile-container">
-            <button onclick="window.location.href='/profiles/add'" class="add-profile-btn">Add New Profile</button>
-        </div>
-        <div class="add-profile-container">
-            <button onclick="window.location.href='/profiles/manageAccount'" class="add-profile-btn">Manage Account</button>
+            <!-- Add profile button -->
+            <div class="add-profile-container">
+                <button onclick="window.location.href='/profiles/add'" class="add-profile-btn">Add New Profile</button>
+            </div>
+            <div class="add-profile-container">
+                <button onclick="window.location.href='/profiles/manageAccount'" class="add-profile-btn">Manage Account</button>
+            </div>
         </div>
     </div>
 
-</div>
+</section>
+
 
 
 
