--- a/src/main/resources/templates/manage_account.html
+++ b/src/main/resources/templates/manage_account.html
@@ -14,6 +14,7 @@
 
 <nav class="navbar">
     <div class="nav-left">
+        <a class="navItem" th:href="@{/}">Start</a>
         <a class="navItem" th:href="@{/profiles/manageAccount}">Manage Users</a>
         <a class="navItem" th:href="@{/profiles/add}">Add User</a>
 
