--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -35,7 +35,6 @@
 
 <!-- Dropdown placed outside nav -->
 <div class="dropdown-menu" id="dropdownMenu">
-    <a class="dpdItemUserName" th:text="${userName}"></a>
     <a class="dpdItem" th:href="@{/}">Change Profile</a>
     <a class="dpdItem" th:href="@{/profiles/manageAccount}">Manage users</a>
     <a class="dpdItem" th:href="@{/profiles/add}">Add new user</a>
@@ -140,7 +139,8 @@
             4. After the user has selected the device they wish to stream to, the video should appear on the selected device and start streaming
         </p>
         <strong id="DisclaimerAndLicenses">Disclaimer and licenses</strong>
-
+        <a></a>
+        <p>See the licenses here: <a class="footerLinksPortfolio" href="https://github.com/nikholt1/HT?tab=GPL-3.0-1-ov-file">github.com/nikholt1/HT?tab=GPL-3.0-1-ov-file</a></p>
 
     </div>
 
