--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -141,7 +141,7 @@
         <strong id="DisclaimerAndLicenses">Disclaimer and licenses</strong>
         <a></a>
         <p>See the licenses here: <a class="footerLinksPortfolio" href="https://github.com/nikholt1/HT?tab=GPL-3.0-1-ov-file">github.com/nikholt1/HT?tab=GPL-3.0-1-ov-file</a></p>
-
+        <p>For the notice visit the Github page and look for the NOTICE.txt file, which will include all dependency necessary information</p>
     </div>
 
 
